# PrEditor

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  post_install-blur-blurdev.py  post_install_blurdev.py  progress.py  pyproject.toml  requirements-cli.txt  requirements-dev.txt  requirements-qsci5.txt  requirements-qsci6.txt  requirements-shortcut.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: release.yml  static-analysis-and-test.yml
blurdev/: __init__.py  build.py  configset.py  contexts.py  debug.py  decorators.py  enum.py  external.py  ini.py  keychain.py  logger.py  osystem.py  prefs.py  resource_finder.py  settings.ini  settings.py  template.py  version.py  zipper.py
blurdev/XML/: __init__.py  minidom.py  xmldocument.py  xmlelement.py
blurdev/action/: __init__.py  base.py  constants.py  decorators.py  exceptions.py
blurdev/actions/: create_redmine_issue.py
blurdev/blur_enum/: enum.py
blurdev/cli/: __init__.py
blurdev/cli/commands/: cmd_env.py  cmd_launch.py  cmd_protocol.py  cmd_shortcut.py
blurdev/cores/: __init__.py  application.py  core.py  fusioncore.py  houdinicore.py  katanacore.py  maricore.py  mayacore.py  motionbuildercore.py  nukecore.py  rvcore.py  softimagecore.py  studiomaxcore.py
blurdev/gui/: __init__.py  console.py  dialog.py  dockwidget.py  errordialog.py  highlighter.py  icon_factory.py  loggerwindow.py  palette.ui  splashscreen.py  window.py  winwidget.py  wizard.py  workboxwidget.py
blurdev/gui/delegates/: __init__.py  combocheckboxdelegate.py  griddelegate.py  htmlitemdelegate.py
blurdev/gui/designer/: __init__.py  accordianwidgetplugin.py  blurtreewidgetplugin.py  colorpickerbuttonplugin.py  colorpickerwidgetplugin.py  documenteditorplugin.py  filepickerwidgetplugin.py  multiplechoicebuttonplugin.py  previewwidgetplugin.py
blurdev/gui/dialogs/: createenvironmentdialog.py  managecoreprefsdialog.py
blurdev/gui/helpers/: __init__.py  dragFilter.py  hinthelper.py  widgeteventhelper.py
blurdev/gui/highlighters/: __init__.py  codehighlighter.py  spellinghighlighter.py
blurdev/ide/: __init__.py  delayable_engine.py  delegates.py  documenteditor.py  finddialog.py  findfilesdialog.py  findreplacedialog.py  ideaboutdialog.py  ideaddon.py  idedocumentsettings.py  ideeditor.py  idefilemenu.py  ideglobals.py  idelanguagedialog.py  idemenu.py  idemethodbrowserdialog.py  idemethodbrowserwidget.py  ideprefs.py  ideproject.py  ideprojectdialog.py  ideprojectfavoritesdialog.py  ideprojectitemdialog.py  ideprojectmodel.py  ideregistry.py  idetemplate.py  idetemplatebrowser.py  idetemplatepreviewpage.py  idewizardbrowser.py  idewizardpreviewpage.py  languagecombobox.py  main.py  plugin.py  pluginitem.py  projects.xml  templatebuilder.py
blurdev/media/: __init__.py  dsofile.py  functions.py  html2text.py
blurdev/models/: objecttreemodel.py
blurdev/protocols/: __init__.py  blurdev_handler.py  treegrunt_handler.py  write_std_output_handler.py
blurdev/resource/: designer_plugins.xml  environment_variables.html  error_email_old.html  error_mail.html  error_mail_inline.html  settings.ini  tools_environments.json  tools_environments.xml  tools_environments_linux.xml  tools_environments_offline.xml
blurdev/scintilla/: __init__.py  documenteditor.py  finddialog.py
blurdev/scripts/: __init__.py  merge_treegrunt_favorites.py  pdbtest.py  post_install_env_update.py  reduceTools.py  winshell.py
blurdev/tools/: __init__.py  icons.py  setup_tools.py  tool.py  toolbars.py  toolheader.py  toolscategory.py  toolsenvironment.py  toolsfavoritegroup.py  toolsindex.py  toolslovebar.py  toolspackage.py  toolstoolbar.py
blurdev/utils/: __init__.py  abcutils.py  clipboard.py  envutils.py  error.py  errorEmail.py  fileutils.py  fumeutils.py  pdbio.py  shortcut.py  winutils.py
config/: __init__.py  authorconfig.py  designer_plugins.xml  tools.xml
config/lang/: python.xml
examples/: add_to_app.py  output_capture_and_show.py  output_console.py  output_console.ui
preditor/: __init__.py  __main__.py  about_module.py  cli.py  config.py  constants.py  contexts.py  debug.py  enum.py  excepthooks.py  external.py  logger.py  logging_config.py  osystem.py  plugins.py  prefs.py  settings.py  streamhandler_helper.py  weakref.py
preditor/cores/: __init__.py  application.py  core.py
preditor/dccs/: .hab.json
preditor/delayable_engine/: __init__.py
preditor/gui/: __init__.py  app.py  codehighlighter.py  completer.py  console.py  console_base.py  dialog.py  drag_tab_bar.py  editor_chooser.py  errordialog.py  find_files.py  level_buttons.py  logger_window_handler.py  logger_window_plugin.py  loggerwindow.py  newtabwidget.py  output_console.py  redmine_login_dialog.py  set_text_editor_path_dialog.py  status_label.py  suggest_path_quotes_dialog.py  window.py  workbox_mixin.py  workbox_text_edit.py  workboxwidget.py
preditor/protocols/: __init__.py  write_std_output_handler.py
preditor/resource/: designer_plugins.xml  environment_variables.html  error_mail.html  error_mail_inline.html  settings.ini  tools_environments_linux.xml
preditor/scintilla/: __init__.py  delayable_engine.py  documenteditor.py  finddialog.py
preditor/stream/: __init__.py  console_handler.py  director.py  manager.py
preditor/utils/: __init__.py  call_stack.py  cute.py  error.py  stylesheets.py  text_search.py
tests/: conftest.py  test_config.py  test_cute.py  test_prefs.py  test_stream.py
tests/encodings/: b_utf-8.txt  test_ecoding.py
tests/find_files/: re_greedy_False_0_True.md  re_greedy_False_2_True.md  re_greedy_True_2_True.md  re_greedy_upper_True_2_True.md  re_simple_False_0_True.md  re_simple_False_2_True.md  re_simple_False_3_True.md  re_simple_True_2_True.md  simple_False_0_False.md  simple_False_1_False.md  simple_False_2_False.md  simple_False_3_False.md  simple_True_2_False.md  tab_text.txt  test_find_files.py
tests/ide/: test_delayable_engine.py
(+295 files in other folders)
