[build-system]
requires = [
    "setuptools >= 44.1.1",
    "setuptools_scm[toml] >= 4",
    "wheel >= 0.36",
]
build-backend = "setuptools.build_meta"

[project]
name = "PrEditor"
description = "A python REPL and Editor and console based on Qt."
authors = [{name = "Blur Studio", email = "opensource@blur.com"}]
license = {text = "LGPL-3.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.7"
dependencies = [
    "Qt.py",
    "configparser>=4.0.2",
    "future>=0.18.2",
    "signalslot>=0.1.2",
    "importlib-metadata>=4.8.3",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/blurstudio/PrEditor"
Source = "https://github.com/blurstudio/PrEditor"
Tracker = "https://github.com/blurstudio/PrEditor/issues"

[project.optional-dependencies]
cli =[
    "click>=7.1.2",
    "click-default-group",
]
dev =[
    "black",
    "build",
    "covdefaults",
    "coverage",
    "flake8",
    "flake8-bugbear",
    "Flake8-pyproject",
    "pep8-naming",
    "pytest",
    "tox",
]
shortcut =[
    "casement>=0.1.0;platform_system=='Windows'",
]

[project.scripts]
preditor = "preditor.cli:cli"

[project.gui-scripts]
preditorw = "preditor.cli:cli"

[project.entry-points."preditor.plug.about_module"]
PrEditor = "preditor.about_module:AboutPreditor"
Qt = "preditor.about_module:AboutQt"
Python = "preditor.about_module:AboutPython"
Exe = "preditor.about_module:AboutExe"

[project.entry-points."preditor.plug.editors"]
TextEdit = "preditor.gui.workbox_text_edit:WorkboxTextEdit"
QScintilla = "preditor.gui.workboxwidget:WorkboxWidget"

[project.entry-points."preditor.plug.logging_handlers"]
PrEditor = "preditor.gui.logger_window_handler:LoggerWindowHandler"


[tool.setuptools]
include-package-data = true
platforms = ["any"]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
exclude = ["tests"]
namespaces = false

[tool.setuptools_scm]
write_to = "preditor/version.py"
version_scheme = "release-branch-semver"

[tool.flake8]
select = ["B", "C", "E", "F", "N", "W", "B9"]
extend-ignore = [
    "E203",
    "E501",
    "E722",
    "N802",
    "N803",
    "N806",
    "N815",
    "N816",
    "W503",
]
max-line-length = "80"
exclude = [
    "*.egg-info",
    "*.pyc",
    ".cache",
    ".eggs",
    ".git",
    ".tox",
    "__pycache__",
    "build",
    "dist",
    "docs",
    "shared-venv",
]


[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"
