[build-system]
requires = [
    "setuptools >= 44.1.1",
    "setuptools_scm[toml] >= 4",
    "wheel >= 0.36",
]
build-backend = "setuptools.build_meta"

[project]
name = "PrEditor"
description = "A python REPL and Editor and console based on Qt."
authors = [{name = "Blur Studio", email = "opensource@blur.com"}]
license = {text = "LGPL-3.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.7"
dynamic = ["dependencies", "optional-dependencies", "version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/blurstudio/PrEditor"
Source = "https://github.com/blurstudio/PrEditor"
Tracker = "https://github.com/blurstudio/PrEditor/issues"

[project.scripts]
preditor = "preditor.cli:cli"

[project.gui-scripts]
preditorw = "preditor.cli:cli"

[project.entry-points."preditor.plug.about_module"]
PrEditor = "preditor.about_module:AboutPreditor"
Qt = "preditor.about_module:AboutQt"
Python = "preditor.about_module:AboutPython"
Exe = "preditor.about_module:AboutExe"

[project.entry-points."preditor.plug.editors"]
TextEdit = "preditor.gui.workbox_text_edit:WorkboxTextEdit"
QScintilla = "preditor.gui.workboxwidget:WorkboxWidget"

[project.entry-points."preditor.plug.logging_handlers"]
PrEditor = "preditor.gui.logger_window_handler:LoggerWindowHandler"

[tool.setuptools]
platforms = ["any"]
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
cli = {file = ["requirements-cli.txt"]}
dev = {file = ["requirements-dev.txt"]}
qsci5 = {file = ["requirements-qsci5.txt"]}
qsci6 = {file = ["requirements-qsci6.txt"]}
shortcut = {file = ["requirements-shortcut.txt"]}

[tool.setuptools.packages.find]
exclude = [
    "examples",
    "tests",
]

[tool.setuptools_scm]
write_to = "preditor/version.py"
version_scheme = "release-branch-semver"

[tool.flake8]
select = ["B", "C", "E", "F", "N", "W", "B9"]
extend-ignore = [
    "E203",
    "E501",
    "E722",
    "N802",
    "N803",
    "N806",
    "N815",
    "N816",
    "W503",
]
max-line-length = "80"
exclude = [
    "*.egg-info",
    "*.pyc",
    ".cache",
    ".eggs",
    ".git",
    ".tox",
    "__pycache__",
    "build",
    "dist",
    "docs",
    "shared-venv",
]


[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"
