[metadata]
name = PrEditor
version = file: preditor/version.py
description = preditor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.blur.com/pipeline/preditor.git
author = Blur Studio
author_email = opensource@blur.com
license = GNU LGPLv3
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
platform = any

[options]
packages = find:
install_requires =
    blur-cute>=0.25.0
    blur-pillar>=0.40.0
    blur-sentry-bootstrap>=1.1.0
    casement>=0.0.2.dev6;platform_system=="Windows"
    click-default-group
    click>=7.1.2
    configparser>=4.0.2
    future>=0.18.2
    Pygments>=2.4.2
    python-redmine>=2.1.1
    QScintilla>=2.11.4;python_version>="3.5"
    signalslot>=0.1.2
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*
include_package_data = True
setup_requires =
    setuptools
    setuptools_scm[toml]>=4,<6
    wheel

[options.packages.find]
exclude = tests

[options.entry_points]
gui_scripts =
    preditorw = preditor.cli:cli
console_scripts =
    preditor = preditor.cli:cli

[options.extras_require]
dev =
    black
    covdefaults
    coverage
    flake8
    flake8-bugbear
    pep8-naming
    pytest
    tox

[bdist_wheel]
universal = 1

[flake8]
select = B, C, E, F, N, W, B9
extend-ignore =
    E203,
    E501,
    E722,
    N802,
    N803,
    N806,
    N815,
    N816,
max-line-length = 80
exclude =
    *.egg-info
    *.pyc
    .cache
    .eggs
    .git
    .tox
    __pycache__
    build
    dist
    docs
    shared-venv
