[metadata]
name = PrEditor
version = file: preditor/version.py
description = A python REPL and Editor and console based on Qt.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.blur.com/pipeline/preditor.git
author = Blur Studio
author_email = opensource@blur.com
license = LGPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
platform = any

[options]
packages = find:
install_requires =
    Qt.py
    configparser>=4.0.2
    future>=0.18.2
    python-redmine>=2.1.1
    signalslot>=0.1.2
    importlib-metadata>=5.0.0;python_version>="3.6"
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*
include_package_data = True
setup_requires =
    setuptools
    setuptools-scm[toml]>=4,<6
    wheel

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    preditor = preditor.cli:cli
gui_scripts =
    preditorw = preditor.cli:cli
preditor.plug.about_module =
    PrEditor = preditor.about_module:AboutPreditor
    Qt = preditor.about_module:AboutQt
    Python = preditor.about_module:AboutPython
    Exe = preditor.about_module:AboutExe
preditor.plug.editors =
    TextEdit = preditor.gui.workbox_text_edit:WorkboxTextEdit
    QScintilla = preditor.gui.workboxwidget:WorkboxWidget
preditor.plug.logging_handlers =
    PrEditor = preditor.gui.logger_window_handler:LoggerWindowHandler

[options.extras_require]
cli =
    click>=7.1.2
    click-default-group
dev =
    black
    covdefaults
    coverage
    flake8
    flake8-bugbear
    pep8-naming
    pytest
    tox
shortcut =
    casement>=0.1.0;platform_system=="Windows"

[bdist_wheel]
universal = 1

[flake8]
select = B, C, E, F, N, W, B9
extend-ignore =
    E203,
    E501,
    E722,
    N802,
    N803,
    N806,
    N815,
    N816,
    W503,
max-line-length = 80
exclude =
    *.egg-info
    *.pyc
    .cache
    .eggs
    .git
    .tox
    __pycache__
    build
    dist
    docs
    shared-venv
